--- a/notebooks/Combine_table.ipynb
+++ b/notebooks/Combine_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,15 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/10/17 13:27:36 WARN Utils: Your hostname, Zhangs-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.12.29.191 instead (on interface en0)\n",
-      "22/10/17 13:27:36 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "22/10/18 13:01:21 WARN Utils: Your hostname, Macintosh.local resolves to a loopback address: 127.0.0.1; using 10.12.240.133 instead (on interface en0)\n",
+      "22/10/18 13:01:21 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -38,9 +38,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/10/17 13:27:36 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "22/10/17 13:27:37 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "22/10/17 13:27:37 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
+      "22/10/18 13:01:21 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/10/18 13:01:22 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -57,68 +56,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table border='1'>\n",
-       "<tr><th>merchant_abn</th><th>predict_dollar_value</th></tr>\n",
-       "<tr><td>11093673306</td><td>69.63705444335938</td></tr>\n",
-       "<tr><td>11121775571</td><td>42.397274017333984</td></tr>\n",
-       "<tr><td>11134994590</td><td>6068.73291015625</td></tr>\n",
-       "<tr><td>11137507330</td><td>101.62303161621094</td></tr>\n",
-       "<tr><td>11149063370</td><td>8951.830078125</td></tr>\n",
-       "<tr><td>11173270682</td><td>179.31930541992188</td></tr>\n",
-       "<tr><td>11199348915</td><td>493.9423522949219</td></tr>\n",
-       "<tr><td>11208869091</td><td>747.7931518554688</td></tr>\n",
-       "<tr><td>11215815177</td><td>718.6666259765625</td></tr>\n",
-       "<tr><td>11237511112</td><td>184.6631317138672</td></tr>\n",
-       "<tr><td>11240426404</td><td>117.4815444946289</td></tr>\n",
-       "<tr><td>11243046390</td><td>186.86866760253906</td></tr>\n",
-       "<tr><td>11285988014</td><td>106.37662506103516</td></tr>\n",
-       "<tr><td>11304124014</td><td>171.20803833007812</td></tr>\n",
-       "<tr><td>11355018654</td><td>186.523681640625</td></tr>\n",
-       "<tr><td>11358147682</td><td>13806.6923828125</td></tr>\n",
-       "<tr><td>11400713351</td><td>12236.1513671875</td></tr>\n",
-       "<tr><td>11411018019</td><td>961.7571411132812</td></tr>\n",
-       "<tr><td>11422053652</td><td>99.4420166015625</td></tr>\n",
-       "<tr><td>11422618712</td><td>123.71813201904297</td></tr>\n",
-       "</table>\n",
-       "only showing top 20 rows\n"
-      ],
-      "text/plain": [
-       "+------------+--------------------+\n",
-       "|merchant_abn|predict_dollar_value|\n",
-       "+------------+--------------------+\n",
-       "| 11093673306|   69.63705444335938|\n",
-       "| 11121775571|  42.397274017333984|\n",
-       "| 11134994590|    6068.73291015625|\n",
-       "| 11137507330|  101.62303161621094|\n",
-       "| 11149063370|      8951.830078125|\n",
-       "| 11173270682|  179.31930541992188|\n",
-       "| 11199348915|   493.9423522949219|\n",
-       "| 11208869091|   747.7931518554688|\n",
-       "| 11215815177|   718.6666259765625|\n",
-       "| 11237511112|   184.6631317138672|\n",
-       "| 11240426404|   117.4815444946289|\n",
-       "| 11243046390|  186.86866760253906|\n",
-       "| 11285988014|  106.37662506103516|\n",
-       "| 11304124014|  171.20803833007812|\n",
-       "| 11355018654|    186.523681640625|\n",
-       "| 11358147682|    13806.6923828125|\n",
-       "| 11400713351|    12236.1513671875|\n",
-       "| 11411018019|   961.7571411132812|\n",
-       "| 11422053652|    99.4420166015625|\n",
-       "| 11422618712|  123.71813201904297|\n",
-       "+------------+--------------------+\n",
-       "only showing top 20 rows"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AnalysisException",
+     "evalue": "Path does not exist: file:/Users/lydialyu/Documents/个人/1UoM/2 MAST30034 Applied Data Science/MAST30034 Assignment/Assignment 2/generic-buy-now-pay-later-project-group-16-project2-fighting-group/data/curated/prediction/predicted_dollar_value0.parquet",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/lydialyu/Documents/个人/1UoM/2 MAST30034 Applied Data Science/MAST30034 Assignment/Assignment 2/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/Combine_table.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lydialyu/Documents/%E4%B8%AA%E4%BA%BA/1UoM/2%20MAST30034%20Applied%20Data%20Science/MAST30034%20Assignment/Assignment%202/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/Combine_table.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m census \u001b[39m=\u001b[39m spark\u001b[39m.\u001b[39mread\u001b[39m.\u001b[39mparquet(\u001b[39m'\u001b[39m\u001b[39m../data/curated/final_census.parquet\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lydialyu/Documents/%E4%B8%AA%E4%BA%BA/1UoM/2%20MAST30034%20Applied%20Data%20Science/MAST30034%20Assignment/Assignment%202/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/Combine_table.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m post_sa2_2021 \u001b[39m=\u001b[39m spark\u001b[39m.\u001b[39mread\u001b[39m.\u001b[39mparquet(\u001b[39m\"\u001b[39m\u001b[39m../data/external/postcode_sa2_conrrespondences.parquet\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lydialyu/Documents/%E4%B8%AA%E4%BA%BA/1UoM/2%20MAST30034%20Applied%20Data%20Science/MAST30034%20Assignment/Assignment%202/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/Combine_table.ipynb#W2sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m prediction \u001b[39m=\u001b[39m spark\u001b[39m.\u001b[39;49mread\u001b[39m.\u001b[39;49mparquet(\u001b[39m'\u001b[39;49m\u001b[39m../data/curated/prediction/predicted_dollar_value0.parquet\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lydialyu/Documents/%E4%B8%AA%E4%BA%BA/1UoM/2%20MAST30034%20Applied%20Data%20Science/MAST30034%20Assignment/Assignment%202/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/Combine_table.ipynb#W2sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Read all the prediction data\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lydialyu/Documents/%E4%B8%AA%E4%BA%BA/1UoM/2%20MAST30034%20Applied%20Data%20Science/MAST30034%20Assignment/Assignment%202/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/Combine_table.ipynb#W2sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m counts \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m45\u001b[39m):\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.10/site-packages/pyspark/sql/readwriter.py:364\u001b[0m, in \u001b[0;36mDataFrameReader.parquet\u001b[0;34m(self, *paths, **options)\u001b[0m\n\u001b[1;32m    353\u001b[0m int96RebaseMode \u001b[39m=\u001b[39m options\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mint96RebaseMode\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m)\n\u001b[1;32m    354\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_set_opts(\n\u001b[1;32m    355\u001b[0m     mergeSchema\u001b[39m=\u001b[39mmergeSchema,\n\u001b[1;32m    356\u001b[0m     pathGlobFilter\u001b[39m=\u001b[39mpathGlobFilter,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    361\u001b[0m     int96RebaseMode\u001b[39m=\u001b[39mint96RebaseMode,\n\u001b[1;32m    362\u001b[0m )\n\u001b[0;32m--> 364\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_df(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_jreader\u001b[39m.\u001b[39;49mparquet(_to_seq(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_spark\u001b[39m.\u001b[39;49m_sc, paths)))\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.10/site-packages/py4j/java_gateway.py:1321\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1315\u001b[0m command \u001b[39m=\u001b[39m proto\u001b[39m.\u001b[39mCALL_COMMAND_NAME \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1316\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcommand_header \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     args_command \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     proto\u001b[39m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1320\u001b[0m answer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgateway_client\u001b[39m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1321\u001b[0m return_value \u001b[39m=\u001b[39m get_return_value(\n\u001b[1;32m   1322\u001b[0m     answer, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgateway_client, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtarget_id, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mname)\n\u001b[1;32m   1324\u001b[0m \u001b[39mfor\u001b[39;00m temp_arg \u001b[39min\u001b[39;00m temp_args:\n\u001b[1;32m   1325\u001b[0m     temp_arg\u001b[39m.\u001b[39m_detach()\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.10/site-packages/pyspark/sql/utils.py:196\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    192\u001b[0m converted \u001b[39m=\u001b[39m convert_exception(e\u001b[39m.\u001b[39mjava_exception)\n\u001b[1;32m    193\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    194\u001b[0m     \u001b[39m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    195\u001b[0m     \u001b[39m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 196\u001b[0m     \u001b[39mraise\u001b[39;00m converted \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[1;32m    197\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    198\u001b[0m     \u001b[39mraise\u001b[39;00m\n",
+      "\u001b[0;31mAnalysisException\u001b[0m: Path does not exist: file:/Users/lydialyu/Documents/个人/1UoM/2 MAST30034 Applied Data Science/MAST30034 Assignment/Assignment 2/generic-buy-now-pay-later-project-group-16-project2-fighting-group/data/curated/prediction/predicted_dollar_value0.parquet"
+     ]
     }
    ],
    "source": [
@@ -139,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,13 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# get the monthly average features\n",
-    "number_of_months = 18\n",
+    "f = open(\"../data/number_of_months.txt\", \"r\")\n",
+    "number_of_months = int(f.read())\n",
+    "\n",
     "grouped_transaction = grouped_transaction.withColumn('Avg_amount_monthly', round(grouped_transaction['Amount']/number_of_months, 2))\n",
     "grouped_transaction = grouped_transaction.withColumn('Avg_count_monthly', round(grouped_transaction['Count']/number_of_months, 2))\n",
     "grouped_transaction = grouped_transaction.withColumn('Order_avg_value', round(grouped_transaction.Amount/grouped_transaction.Count,2))\n",
@@ -238,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
