--- a/notebooks/read_external_data.ipynb
+++ b/notebooks/read_external_data.ipynb
@@ -57,7 +57,7 @@
     "spark = (\n",
     "    SparkSession.builder.appName(\"MAST30034 Tutorial 1\")\n",
     "    .config(\"spark.sql.repl.eagerEval.enabled\", True) \n",
-    "    .config(\"spark.sql.parquet.cacheMeta../data\", \"true\")\n",
+    "    .config(\"spark.sql.parquet.cacheMetadata\", \"true\")\n",
     "    .config(\"spark.sql.session.timeZone\", \"Etc/UTC\")\n",
     "    .getOrCreate()\n",
     ")"
@@ -128,14 +128,14 @@
     "for type in types:\n",
     "    G04= spark.read.option(\"header\",True).csv(f'../data/outer/census/2021 Census GCP Statistical Area 2 for AUS/2021Census_G04{type}_AUST_SA2.csv') #read the parquet \n",
     "    G04 = G04.na.drop(subset=G04.columns)\n",
-    "    G04.write.mode(\"overwrite\").parquet(f\"../data/external/census_../data_2021_04{type}.parquet\")\n",
+    "    G04.write.mode(\"overwrite\").parquet(f\"../data/external/census_data_2021_04{type}.parquet\")\n",
     "\n",
     "types = [\"A\", \"B\", \"C\"]\n",
     "for type in types:\n",
     "    G17= spark.read.option(\"header\",True).csv(f'../data/outer/census/2021 Census GCP Statistical Area 2 for AUS/2021Census_G17{type}_AUST_SA2.csv') #read the parquet \n",
     "    G17 = G17.na.drop(subset=G17.columns)\n",
     "\n",
-    "    G17.write.mode(\"overwrite\").parquet(f\"../data/external/census_../data_2021_17{type}.parquet\")"
+    "    G17.write.mode(\"overwrite\").parquet(f\"../data/external/census_data_2021_17{type}.parquet\")"
    ]
   },
   {
@@ -178,7 +178,7 @@
     "    .groupBy(\"postcode\", \"SA2_MAINCODE_2016\")\\\n",
     "    .agg(F.avg(\"Lat_double\").alias(\"avg_lat\"), F.avg(\"Long_double\").alias(\"avg_long\"))\n",
     "\n",
-    "#post_sa2.write.mode('overwrite').parquet(\"../data/outer/postcode_SA2.parquet\")"
+    " "
    ]
   },
   {
@@ -292,11 +292,11 @@
    "outputs": [],
    "source": [
     "# read the external census datasets\n",
-    "census_04A_age = spark.read.parquet('../data/external/census_../data_2021_04A.parquet')\n",
-    "census_04B_age = spark.read.parquet('../data/external/census_../data_2021_04B.parquet')\n",
-    "census_17A_income = spark.read.parquet('../data/external/census_../data_2021_17A.parquet')\n",
-    "census_17B_income = spark.read.parquet('../data/external/census_../data_2021_17B.parquet')\n",
-    "census_17C_income = spark.read.parquet('../data/external/census_../data_2021_17C.parquet')\n",
+    "census_04A_age = spark.read.parquet('../data/external/census_data_2021_04A.parquet')\n",
+    "census_04B_age = spark.read.parquet('../data/external/census_data_2021_04B.parquet')\n",
+    "census_17A_income = spark.read.parquet('../data/external/census_data_2021_17A.parquet')\n",
+    "census_17B_income = spark.read.parquet('../data/external/census_data_2021_17B.parquet')\n",
+    "census_17C_income = spark.read.parquet('../data/external/census_data_2021_17C.parquet')\n",
     "postcode = post_sa2\n",
     "\n",
     "# Merge the age dataframe\n",
@@ -331,7 +331,7 @@
     "income_data_total = income_data_total.withColumn(\"income_percentage\", income_data_total.result / income_data_total.P_Tot_Tot)\n",
     "income_data_total = income_data_total.select(\"SA2_CODE_2021\",\"income_percentage\")\n",
     "\n",
-    "# Combine income ../data and the age ../data to get final census ../data\n",
+    "# Combine income data and the age data to get final census data\n",
     "census_data = income_data_total.join(Age_data_rate, income_data_total.SA2_CODE_2021 == Age_data_rate.SA2_CODE_2021).drop(Age_data_rate.SA2_CODE_2021)\n",
     "census_data.write.mode('overwrite').parquet('../data/curated/final_census.parquet')\n",
     "\n"
